# DogeLanguage

./: Analyzer.hpp  CMakeLists.txt  Callable.hpp  Color.hpp  Environment.hpp  ErrorHandler.hpp  Expression.hpp  File.hpp  IRCompiler.hpp  Interpreter.hpp  Optimizer.hpp  Parser.hpp  Printers.hpp  README.md  Scanner.hpp  main.cpp  popl.hpp
Examples/: fib.doge  pi.doge
doge_project/: SL.cpp  constant.doge  main.doge  pi.doge  test.ll
scripts/: HelloWorld.doge  Linkedlist.doge  blank_compiled.doge  classtest.doge  compiled.doge  compiled_comparison.doge  convulution.doge  fib.doge  fibcompiled.doge  forktest.doge  output.cpp  pi.doge  tests22.doge  threading.doge  threadjoin.doge  threadref.doge
